// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base Button Snapshot should render with large size 1`] = `
<div>
  <button
    class="css-1fs3ka8 e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with small size 1`] = `
<div>
  <button
    class="css-1s5rzag e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated color 1`] = `
<div>
  <button
    class="css-4x3nij e183qit0"
    color="secondary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    class="css-12f1w2t e183qit0"
    color="primary"
    id="testId"
    shape="round"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated textTransform 1`] = `
<div>
  <button
    class="css-jubjjm e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    class="css-exk0g0 e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with large size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-mnpfpi e183qit0"
    color="primary"
    id="testId"
    shape="round"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="24"
      viewBox="0 0 29.37 21.88"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with small size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1xqhztd e183qit0"
    color="primary"
    id="testId"
    shape="round"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="14"
      viewBox="0 0 29.37 21.88"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated color 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1k6yz2s e183qit0"
    color="secondary"
    id="testId"
    shape="round"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-uyui93 e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-29uj2w e183qit0"
    color="primary"
    id="testId"
    shape="round"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with large size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1fs3ka8 e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-6d5fwk e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="20"
      viewBox="0 0 29.37 21.88"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with medium size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-qhwgaw e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-1p2jtab e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with small size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1s5rzag e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-1p2jtab e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="12"
      viewBox="0 0 29.37 21.88"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated color 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-4x3nij e183qit0"
    color="secondary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-1p2jtab e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-qhwgaw e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-1p2jtab e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated text transform 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-jubjjm e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-1p2jtab e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-exk0g0 e183qit0"
    color="primary"
    id="testId"
    shape="fill"
  >
    <span
      class="css-1p2jtab e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;
